CSW: CSTL-17: metadatawriter know can access directly the fields